--- a/_sass/minimal/_page.scss
+++ b/_sass/minimal/_page.scss
@@ -6,7 +6,7 @@
 }
 
 .post {
-  text-align: justify;
+  //text-align: justify;
   width: 100%;
 }
 
